[package]
name = "env-lock"
description = "Set and lock environment variables for tests"
version = "0.1.2"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
repository = "https://github.com/LucasPickering/env-lock"
edition = "2021"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.70.0"

[dependencies]

[workspace.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}" },
]
